--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="md:w-1/2 flex justify-center md:justify-end">
         <img alt="Portrait of Sandeepkumar S" class="rounded-full w-64 h-64 object-cover shadow-lg" height="400"
-          loading="lazy" src="Images/profilePic.png" width="400" />
+          loading="lazy" src="images/profilePic.png" width="400" />
       </div>
     </section>
     <!-- About Section -->
@@ -91,7 +91,7 @@
 
         <!-- Resume Button -->
         <div class="mt-8">
-          <a href="Images/Sandeep_Resume.pdf" target="_blank" class="px-6 py-3 bg-indigo-600 text-white rounded-md font-semibold hover:bg-indigo-700 transition inline-block">Resume</a>
+          <a href="images/Sandeep_Resume.pdf" target="_blank" class="px-6 py-3 bg-indigo-600 text-white rounded-md font-semibold hover:bg-indigo-700 transition inline-block">Resume</a>
         </div>
       </div>
     </section>
@@ -131,7 +131,7 @@
       <div class="max-w-4xl mx-auto grid gap-8 sm:grid-cols-2">
         <article class="bg-white rounded-lg shadow hover:shadow-lg transition flex flex-col">
           <img alt="Screenshot of Smart Wireless Water Meter project interface with graphs and data"
-            class="w-full h-40 object-cover rounded-t-lg" height="240" loading="lazy" src="Images/project_1.png"
+            class="w-full h-40 object-cover rounded-t-lg" height="240" loading="lazy" src="images/project_1.png"
             width="600" />
           <div class="p-6 flex flex-col flex-grow">
             <h3 class="text-lg font-semibold mb-2 text-gray-900">Smart Wireless Water Meter with Web DB</h3>
@@ -148,7 +148,7 @@
         </article>
         <article class="bg-white rounded-lg shadow hover:shadow-lg transition flex flex-col">
           <img alt="Screenshot of XenzKart full stack project" class="w-full h-40 object-cover rounded-t-lg"
-            height="240" loading="lazy" src="Images/project_2.png" width="600" />
+            height="240" loading="lazy" src="images/project_2.png" width="600" />
           <div class="p-6 flex flex-col flex-grow">
             <h3 class="text-lg font-semibold mb-2 text-gray-900">XenzKart - Full Stack Project</h3>
             <p class="text-gray-700 flex-grow mb-4">🛒 E-commerce web application with product display, cart management,
@@ -163,7 +163,7 @@
         </article>
         <article class="bg-white rounded-lg shadow hover:shadow-lg transition flex flex-col">
           <img alt="Screenshot of ShoppyKart template" class="w-full h-40 object-cover rounded-t-lg" height="240"
-            loading="lazy" src="Images/project_3.png" width="600" />
+            loading="lazy" src="images/project_3.png" width="600" />
           <div class="p-6 flex flex-col flex-grow">
             <h3 class="text-lg font-semibold mb-2 text-gray-900">ShoppyKart Template</h3>
             <p class="text-gray-700 flex-grow mb-4">🛍️ A simple e-commerce website with product display, cart
@@ -177,7 +177,7 @@
         </article>
         <article class="bg-white rounded-lg shadow hover:shadow-lg transition flex flex-col">
           <img alt="Screenshot of E-commerce GUI project interface with product categories"
-            class="w-full h-40 object-cover rounded-t-lg" height="240" loading="lazy" src="Images/project_4.png"
+            class="w-full h-40 object-cover rounded-t-lg" height="240" loading="lazy" src="images/project_4.png"
             width="600" />
           <div class="p-6 flex flex-col flex-grow">
             <h3 class="text-lg font-semibold mb-2 text-gray-900">E-commerce GUI</h3>
